--- a/src/views/SelectUserType.mxml
+++ b/src/views/SelectUserType.mxml
@@ -45,8 +45,9 @@
         }
 
         protected function checkNetStatus(e:UserObjectEvent) {
+
             trace("net status event inside userselect");
-            if (UserObject.instance.isConnected) {
+            if (e.netStatus) {
                 faceBtn.visible = true;
                 faceSpacer.visible = true;
                 faceBtn.includeInLayout = true;
@@ -96,7 +97,7 @@
         }
 
         protected function extraCheck_clickHandler(event:MouseEvent):void {
-            UserObject.instance.extraterms = !extraCheck.selected;
+            UserObject.instance.extraterms = extraCheck.selected;
 
         }
         ]]>
@@ -114,8 +115,8 @@
 		property="selected" maxLength="4" requiredFieldError="{ML.t('You must accept marketing approach from Vodafone.')}" tooLongError="You must accept marketing approach from Vodafone.">
 		</mx:StringValidator-->
 	</fx:Declarations>
-	<s:BorderContainer width="100%" height="100%" borderVisible="false" backgroundColor="0x000000">
-		<s:BitmapImage width="100%" height="100%" scaleMode="zoom" smooth="true" smoothingQuality="high" source="{Resource.BACKGROUND}"/>
+	<s:BorderContainer width="100%" height="100%" borderVisible="false" backgroundColor="0xcc0000">
+		<s:BitmapImage width="100%" height="100%" smooth="true" source="{Resource.BACKGROUND}"/>
 		
 		<s:VGroup horizontalAlign="center" verticalAlign="middle" width="100%" height="100%">
 			<s:BitmapImage source="{Resource.LOGO}"/>
