--- a/src/views/components/ErrorAlert.mxml
+++ b/src/views/components/ErrorAlert.mxml
@@ -53,9 +53,10 @@
 		</s:Rect>
 		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32" fontFamily="Font Rg CFF" text="{windowTitle}"/>
-			<s:TextArea x="58" y="79" width="484" height="140" color="0x000000" editable="false"
-						fontSize="18" verticalAlign="middle" text="{message}" 
-						selectable="false" />
+			<s:Label x="58" y="79" width="484" height="140" color="0x000000" maxDisplayedLines="{-1}"  lineBreak="toFit"
+                     backgroundColor="#ffffff"
+						fontSize="24" verticalAlign="middle" text="{message}"
+						/>
 			<s:Button height="50"  label="Close" click="PopUpManager.removePopUp(this);" skinClass="skins.CustomButtonWhite"  />
 		</s:VGroup>
 </s:Group>
